# opengm-converter

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  convert_multicut_to_text.cpp
